setup & fix alignments and width of the extension

--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
     font-size: 16px;
     line-height: 24px;
     font-weight: 400;
-    width: 600px;
-    height: 400px;
+    width: 800px;
+    height: 600px;
 
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
